syntax = "proto3";
package corepb;

import "transaction.proto";

message BlockHeader {
  bytes hash  = 1;
  bytes parent_hash = 2;

  bytes coinbase = 3;
  int64 timestamp = 4;
  uint32 chain_id = 5;

  uint32 alg = 6;
  bytes sign = 7;
}

message Block {
  BlockHeader header = 1;
  repeated Transaction transactions = 2;
  uint64 height = 3;
}
